version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/ABAQUS/ABAQUSCommand.rst.txt
.. vale off



:class:`ABAQUSCommand`
======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.ABAQUS.ABAQUSCommand

   Bases: :py:obj:`object`


   
   ABAQUSCommand class.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ABAQUSCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: Index
   :type: Optional[int]

   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]

   
   Gets the command name.
















   ..
       !! processed by numpydoc !!







.. vale on